# stable-diffusion-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  container.yml  rustdoc.yml
crates/comfui-api/: Cargo.toml
crates/comfui-api/src/: main.rs
crates/comfyui-api/: Cargo.toml  README.md
crates/comfyui-api/examples/: comfy.rs  simple.rs
crates/comfyui-api/src/: comfy.rs  history.rs  lib.rs  prompt.rs  websocket.rs
crates/comfyui-api/src/api/: history.rs  mod.rs  prompt.rs  upload.rs  view.rs  websocket.rs
crates/comfyui-api/src/comfy/: accessors.rs  getter.rs  mod.rs  setter.rs  visitor.rs
crates/comfyui-api/src/models/: history.rs  mod.rs  prompt.rs  websocket.rs
crates/sal-e-api/: Cargo.toml  README.md
crates/sal-e-api/src/: api.rs  gen_params.rs  image_params.rs  lib.rs
crates/stable-diffusion-api/: Cargo.toml  README.md
crates/stable-diffusion-api/src/: img2img.rs  lib.rs  txt2img.rs
crates/stable-diffusion-bot/: Cargo.toml
crates/stable-diffusion-bot/src/: lib.rs  main.rs
crates/stable-diffusion-bot/src/bot/: helpers.rs  mod.rs
crates/stable-diffusion-bot/src/bot/handlers/: image.rs  mod.rs  settings.rs
src/: api.rs  bot.rs  main.rs
src/api/: img2img.rs  mod.rs  txt2img.rs
src/bot/: handlers.rs  helpers.rs  mod.rs
src/bot/handlers/: image.rs  mod.rs  settings.rs
