[package]
name = "comfyui-api"
version = "0.2.1"
edition = "2021"
description = "Stable Diffusion ComfyUI API wrapper"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/capslock/stable-diffusion-bot"
repository = "https://github.com/capslock/stable-diffusion-bot"
keywords = ["stable-diffusion", "stable diffusion", "comfyui"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-stream = "0.3.5"
base64 = "0.21.0"
dyn-clone = "1.0.16"
futures-util = "0.3.29"
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
serde = "1.0.157"
serde_json = "1.0.94"
serde_with = "2.3.1"
thiserror = "1.0.52"
tokio-tungstenite = "0.20.1"
tracing = "0.1.37"
typetag = "0.2"
url = "2.5.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros"] }
