[package]
name = "sal-e-api"
version = "0.2.1"
edition = "2021"
rust-version.workspace = true
description = "Stable-Diffusion Abstraction Layer"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/capslock/stable-diffusion-bot"
repository = "https://github.com/capslock/stable-diffusion-bot"
keywords = ["stable-diffusion", "stable diffusion", "sal-e", "comfyui"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.74"
base64 = "0.21.0"
comfyui-api = { path = "../comfyui-api" }
dyn-clone = "1.0.16"
futures-util = "0.3.29"
rand = "0.8.5"
reqwest = "0.11.23"
serde = "1.0.157"
stable-diffusion-api = { path = "../stable-diffusion-api" }
thiserror = "1.0.52"
tracing = "0.1.37"
typetag = "0.2"

[dev-dependencies]
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
