[package]
name = "stable-diffusion-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.157"
serde_json = "1.0.94"
serde_with = "2.3.1"
