[package]
name = "stable-diffusion-api"
version = "0.1.2"
edition = "2021"
description = "Stable Diffusion WebUI API wrapper"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/capslock/stable-diffusion-bot"
repository = "https://github.com/capslock/stable-diffusion-bot"
keywords = ["stable-diffusion", "stable diffusion"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.157"
serde_json = "1.0.94"
serde_with = "2.3.1"
thiserror = "1.0.52"
url = "2.5.0"
