[package]
name = "stable-diffusion-bot"
version = "0.2.1"
edition = "2021"
rust-version.workspace = true
description = "Stable Diffusion Telegram Bot"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/capslock/stable-diffusion-bot"
repository = "https://github.com/capslock/stable-diffusion-bot"
keywords = ["stable-diffusion", "stable diffusion", "comfyui", "telegram"]
categories = ["command-line-utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.74"
base64 = "0.21.0"
bytes = "1.4.0"
clap = { version = "4.4.7", features = ["derive"] }
comfyui-api = { path = "../comfyui-api" }
figment = { version = "0.10.8", features = ["toml", "env"] }
futures = "0.3.28"
itertools = "0.12.0"
lazy_static = "1.4.0"
regex = "1"
reqwest = { version = "0.11.14", features = ["json"] }
sal-e-api = { path = "../sal-e-api" }
serde = "1.0.157"
serde_json = "1.0.94"
stable-diffusion-api = { path = "../stable-diffusion-api" }
teloxide = { version = "0.12", features = ["macros", "sqlite-storage"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
libsystemd = "0.7.0"

[dev-dependencies]
serde_json = "1.0.108"
tokio-test = "0.4.3"
